--- a/admin.html
+++ b/admin.html
@@ -48,7 +48,7 @@
 
 <script>
 // ====== 把此处替换为你的 Apps Script /exec 地址 ======
-const API_URL = 'https://script.google.com/macros/s/你的_EXEC_ID/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbxx1E6Ao9pBv1Ml3uyAe6RTmNfE9b-vcdia0QG6eCKIjnmcvjGAo5wmjbEHdIqLvU4I/exec';
 
 // 使用 text/plain 避免 CORS 预检
 async function apiList(){
