--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
   .muted{color:#6b7280}
   .rowhead{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
   .badge{display:inline-block;padding:2px 8px;border-radius:999px;background:#fee2e2;color:#991b1b;font-size:12px;margin-left:8px}
+  .err{white-space:pre-wrap;font-family:ui-monospace,SFMono-Regular,Consolas,monospace}
 </style>
 </head>
 <body>
@@ -47,33 +48,41 @@
 </div>
 
 <script>
-// ====== 把此处替换为你的 Apps Script /exec 地址 ======
+// ====== 你的 Apps Script /exec 地址 ======
 const API_URL = 'https://script.google.com/macros/s/AKfycbxx1E6Ao9pBv1Ml3uyAe6RTmNfE9b-vcdia0QG6eCKIjnmcvjGAo5wmjbEHdIqLvU4I/exec';
 
-// 使用 text/plain 避免 CORS 预检
+/* ---------- API 封装 ---------- */
+// GET 读取列表（不加任何 headers，避免预检；带 cache-buster）
 async function apiList(){
-  const url = API_URL + '?action=list&_=' + Date.now(); // cache-buster
-  const res = await fetch(url, { method: 'GET' });      // 不要加 headers
+  const url = `${API_URL}?action=list&_=${Date.now()}`;
+  const res = await fetch(url, { method:'GET' });
   const text = await res.text();
-  try { 
-    return JSON.parse(text);
-  } catch (e) {
-    console.error('LIST not JSON:', text);
-    return { ok:false, error:'NOT_JSON', raw:text };
+  // 非 2xx，直接返回调试信息
+  if(!res.ok){
+    return { ok:false, error:`HTTP ${res.status}`, raw:text };
+  }
+  // 返回不是 JSON（比如权限登录页），也直接带回原文
+  try{
+    const j = JSON.parse(text);
+    return j;
+  }catch(e){
+    return { ok:false, error:'NOT_JSON (接口未返回 JSON，常见是未公开部署或 URL 错误)', raw:text.slice(0,800) };
   }
 }
 
+// 删除仍用 POST
 async function apiDelete(ticket){
-  const res = await fetch(API_URL, {
+  const res  = await fetch(API_URL, {
     method: 'POST',
-    headers: { 'Content-Type': 'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action: 'delete', ticket })
+    headers: { 'Content-Type':'text/plain;charset=utf-8' },
+    body: JSON.stringify({ action:'delete', ticket })
   });
   const text = await res.text();
-  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
+  try{ return JSON.parse(text); }
+  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,800) }; }
 }
 
-// ====== 登录 ======
+/* ---------- 登录 ---------- */
 function login(){
   const u=document.getElementById('u').value.trim();
   const p=document.getElementById('p').value.trim();
@@ -86,33 +95,39 @@ function login(){
   }
 }
 
-// ====== 渲染列表 ======
+/* ---------- 渲染列表 ---------- */
 async function loadList(){
   const box = document.getElementById('list');
   box.innerHTML = '<div class="card">加载中…</div>';
 
   try{
     const j = await apiList();
+
     if(!j.ok){
-      box.innerHTML = `<div class="card">读取失败：${escapeHTML(j.error||'')}</div>`;
+      // 把错误细节完全展示出来，便于判断是不是权限 /exec
+      box.innerHTML = `
+        <div class="card">
+          <div><b>读取失败：</b>${escapeHTML(j.error||'')}</div>
+          <div class="muted" style="margin-top:6px">如果 raw 是 HTML（含 &lt;!DOCTYPE 或登录提示），
+          说明 Apps Script 未按“任何人（含匿名）”部署，或 API_URL 不是 /exec。</div>
+          ${j.raw ? `<div class="err" style="margin-top:8px">${escapeHTML(j.raw)}</div>` : ''}
+        </div>`;
       console.error('list error:', j);
       return;
     }
 
     const list = Array.isArray(j.data)? j.data : [];
-    // 疑重：同姓名 +（同微信 或 同邮箱）
     const seen = new Map();
     for(const r of list){
       const k1 = `${(r.name||'').trim()}|${(r.wechat||'').trim()}`;
       const k2 = `${(r.name||'').trim()}|${(r.email||'').trim()}`;
-      seen.set(k1, (seen.get(k1)||0)+1);
-      seen.set(k2, (seen.get(k2)||0)+1);
+      seen.set(k1,(seen.get(k1)||0)+1);
+      seen.set(k2,(seen.get(k2)||0)+1);
     }
 
-    // 按时间倒序
     const sorted = list.slice().sort((a,b)=>{
-      const ta = new Date(a.ts).getTime() || 0;
-      const tb = new Date(b.ts).getTime() || 0;
+      const ta = new Date(a.ts).getTime()||0;
+      const tb = new Date(b.ts).getTime()||0;
       return tb - ta;
     });
 
@@ -133,7 +148,7 @@ async function loadList(){
         </div>
         <table>
           <tr><th>客户姓名</th><td>${escapeHTML(r.name||'')}</td></tr>
-          <tr><th>微信号</th><td>${escapeHTML((r.wechat===undefined||r.wechat===null)?'':r.wechat)||'n/a'}</td></tr>
+          <tr><th>微信号</th><td>${escapeHTML(r.wechat==null?'':r.wechat)||'n/a'}</td></tr>
           <tr><th>邮箱</th><td>${escapeHTML(r.email||'')}</td></tr>
           <tr><th>电话</th><td>${escapeHTML(r.phone||'')}</td></tr>
           <tr><th>最佳匹配推荐</th><td>${escapeHTML(r.best||'')}</td></tr>
@@ -147,19 +162,22 @@ async function loadList(){
     box.innerHTML = html || '<div class="card">暂无记录</div>';
   }catch(err){
     console.error(err);
-    box.innerHTML = '<div class="card">网络异常或接口错误</div>';
+    box.innerHTML = `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
   }
 }
 
-// ====== 删除确认 ======
+/* ---------- 删除确认 ---------- */
 async function confirmDelete(ticket){
   const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
   if(phrase===null) return;
   if(phrase.trim()!=='确认删除'){ alert('口令不正确，已取消删除。'); return; }
-
   try{
     const j = await apiDelete(ticket);
-    if(!j.ok){ alert('删除失败：' + (j.error||'')); return; }
+    if(!j.ok){
+      alert('删除失败：' + (j.error||''));
+      console.error('delete error:', j);
+      return;
+    }
     loadList();
   }catch(err){
     console.error(err);
@@ -167,7 +185,7 @@ async function confirmDelete(ticket){
   }
 }
 
-// ====== HTML 转义 ======
+/* ---------- HTML 转义 ---------- */
 function escapeHTML(s){
   return String(s==null?'':s).replace(/[&<>"']/g, c=>({
     '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
